<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="Home"
        android:id="@+id/home"
        android:icon="@drawable/home_selector" />

    <item
        android:title="Receipt"
        android:id="@+id/receipt"
        android:icon="@drawable/receipt_selector"/>

    <item
        android:title="Environment"
        android:id="@+id/env"
        android:icon="@drawable/env_selector" />
</menu>