...

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfEmailSignIn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="Email address"
        android:backgroundTint="@color/black"
        android:textCursorDrawable="@color/black"
        android:maxLines="1"
...

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="123dp"
        android:layout_height="47dp"
        android:background="@drawable/signup_signin_page_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        tools:ignore="TouchTargetSizeCheck"
...
